fix moteur display

--- a/extensions/bike-configurator/blocks/configurateur.liquid
+++ b/extensions/bike-configurator/blocks/configurateur.liquid
@@ -152,6 +152,7 @@
             marque: data.marque,
             modele: data.modele,
             annee: data.annee,
+            moteur: data.moteur,
             pseudo: data.pseudo,
             numero: data.numero,
             plaquePhare: data.plaquePhare,
